--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="tweet_about">についてツイートしました</string>
     <string name="not_found_on_amazon">Amazonにはありませんでした</string>
     <string name="image_too_big">画像の容量が大きすぎます</string>
+    <string name="dokusyo_now">読書なう</string>
 </resources>
